--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>ALAB 308.1.1</title>
     <meta charset="UTF-8" />
   </head>
 
   <body>
     <div id="app"></div>
-    <script src="index.js" type="module"></script>
+    <script src="index.js"></script>
+    <!-- type="module" -->
   </body>
 </html>
